Upgraded Player Stat Data System + Optimized